# face_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.txt  setup.cfg
.envs/: .postgres
docker/dev/: README.md  docker-compose.yml
docker/dev/django/: Dockerfile  entrypoint.sh
src/conf/: api_router.py  asgi.py  settings.py  urls.py  wsgi.py
src/core/: models.py
src/recognizer/: admin.py  apps.py  exceptions.py  forms.py  functions.py  models.py
src/recognizer/api/serializers/: persons.py  recognizer.py
src/recognizer/api/viewsets/: persons.py  recognizer.py
src/recognizer/management/commands/: load_lfw.py  training_photos.py
src/recognizer/migrations/: 0001_initial.py  0002_install_cube_extension.py
src/recognizer/static/css/: recognizer.css
src/recognizer/static/js/: recognizer.js
src/recognizer/templates/admin/: person_list.html  recognizer.html
src/templates/allauth/account/: base.html  login.html  signup.html
src/templates/allauth/account/email/: email_confirmation_message.txt
src/users/: adapter.py  admin.py  filters.py  forms.py  manager.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_create_demo_user.py
src/users/templates/users/: list.html  profile.html  update.html
